# 3T

./: Cargo.toml
crates/bb/: Cargo.toml
crates/bb-config/: Cargo.toml
crates/bb-server/: Cargo.toml
crates/bb-server/src/: channel.rs  client.rs  lib.rs  server.rs
crates/bb-server/src/ssh/: channel.rs  client.rs  mod.rs
crates/bb-ssh/: Cargo.toml
crates/bb-ssh/src/: channel.rs  client.rs  lib.rs  server.rs
crates/bb-tui/: Cargo.toml
crates/bb-tui/src/: app.rs  events.rs  lib.rs  terminal.rs
crates/bb-tui/src/views/: auth.rs  mod.rs
crates/bb-tui/src/widgets/: mod.rs  status.rs
crates/bb/src/: logger.rs  main.rs
crates/threet/: Cargo.toml
crates/threet-server/: Cargo.toml
crates/threet-server/src/: channel.rs  client.rs  lib.rs  server.rs
crates/threet-ssh/: Cargo.toml
crates/threet-ssh/src/: client.rs  events.rs  lib.rs  server.rs
crates/threet-storage/: Cargo.toml  schema.sql
crates/threet-storage/src/: channel.rs  lib.rs
crates/threet-storage/src/models/: channel.rs  mod.rs  user.rs
crates/threet-tui/: Cargo.toml
crates/threet-tui/src/: app.rs  bind.rs  combo.rs  compositor.rs  event.rs  job.rs  lib.rs  notifications.rs  utils.rs
crates/threet-tui/src/layers/: keybinds.rs  mod.rs
crates/threet-tui/src/views/: authenticate.rs  chat.rs  mod.rs
crates/threet-tui/src/views/authenticate/: combos.rs
crates/threet-tui/src/widgets/: button.rs  field.rs  mod.rs  status.rs
crates/threet/src/: logger.rs  main.rs
src/: app.rs  event.rs  logging.rs  main.rs
src/views/: devices.rs  mod.rs
