[package]
name = "threet-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64ct = "1.6.0"
futures.workspace = true
log.workspace = true
rand = "0.8.5"
russh = "0.53.0"
threet-storage = { version = "0.1.0", path = "../threet-storage" }
threet-tui = { version = "0.1.0", path = "../threet-tui" }
tokio.workspace = true
